--- a/config.yaml
+++ b/config.yaml
@@ -10,31 +10,31 @@
 carpentry: 'wehi'
 
 # Overall title for pages.
-title: 'Introduction to HPC and SLURM' # FIXME
+title: 'Introduction to HPC and SLURM'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
 created: ~ # FIXME
 
 # Comma-separated list of keywords for the lesson
-keywords: 'hpc, cluster, scheduling, batch, SLURM, parallel, lesson, The Carpentries' # FIXME
+keywords: 'hpc, cluster, scheduling, batch, SLURM, parallel'
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'stable' # FIXME
+life_cycle: 'stable'
 
 # License of the lesson
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/WEHI-ResearchComputing/Workshop-IntroToHPC-Slurm' # FIXME
+source: 'https://github.com/WEHI-Education/Workshop-IntroToHPC-Slurm'
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'iskander.j@wehi.edu.au' # FIXME
+contact: 'iskander.j@wehi.edu.au'
 
-
+# Set order of episodes to include (all by default)
 episodes:
 
 # Information for Learners
@@ -56,5 +56,6 @@ profiles:
 # sandpaper and varnish versions) should live
 
 # This is the MB varnish, which is a custom version of the Carpentries varnish
+# It has an option to use the WEHI logo
 varnish: 'melbournebioinformatics/uom-varnish@main'
 
